--- a/materials/rmed-solutions/01-model.Rmd
+++ b/materials/rmed-solutions/01-model.Rmd
@@ -43,7 +43,7 @@ tree_mod
 ```
 
 
-# Your Turn 3
+# Your Turn 2
 
 Fill in the blanks. 
 
@@ -91,7 +91,7 @@ tree_mod %>%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-## Your Turn 4
+## Your Turn 3
 
 What would happen if you repeated this process? Would you get the same answers?
 
@@ -99,7 +99,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-## Your Turn 5
+## Your Turn 4
 
 Run the code below. What does it return?
 
@@ -111,13 +111,13 @@ alz_folds
 ```
 
 
-## Your Turn 6
+## Your Turn 5
 
-Modify the code below to use `fit_resamples` and `alz_folds` to cross-validate the regression tree model. What is the ROC AUC that you collect at the end?
+Modify the code below to use `fit_resamples` and `alz_folds` to cross-validate the classification tree model. What is the ROC AUC that you collect at the end?
 
 ```{r}
 set.seed(100)
-nn_mod %>% 
+tree_mod %>% 
   fit(Class ~ tau + VEGF, 
       data = alz_train) %>% 
   predict(new_data = alz_test) %>% 
@@ -128,7 +128,7 @@ nn_mod %>%
 Answer:
 ```{r}
 set.seed(100)
-nn_mod %>% 
+tree_mod %>% 
   fit_resamples(Class ~ tau + VEGF, 
                 resamples = alz_folds) %>% 
   collect_metrics()
